Fixed location of post type filters on mobile`

--- a/src/routes/MapExplorer/MapExplorer.scss
+++ b/src/routes/MapExplorer/MapExplorer.scss
@@ -194,7 +194,11 @@ button.toggleFeatureFiltersButton {
     right: auto;
   }
 
-  .toggleFeatureFiltersButton {
+  .featureTypeFilters {
+    bottom: 106px;
+  }
+
+  button.toggleFeatureFiltersButton {
     bottom: 66px;
   }
 }
